
=======================================================
            WanT code:  Log of Changes 
=======================================================


05 Apr 2006      configure update from today's CVS version of Q-Espresso: related
                 changes done. Makefile system updated. Bug fixed in subroutine
                 localization_print (fmt problem). (AF)

04 Apr 2006      IOTK updated to v1.1.0development (courtesy of Giovanni Bussi). 
                 iotk.x executable (txt/binary conversions within iotk) 
                 added and compiled together with the library. (AF)

03 Apr 2006      __LINUX64 added (all the defs as for __LINUX) to iotk_config.h . (AF)

20 Mar 2006      defaults for io changed in order to reduce overhead (nsave_dis = 50; 
                 nsave_wan = 200); (AF)
                 Smearing introduced in lead self-energy and conductor Green's function
                 calculation. (BB)

18 Mar 2006      plot.f90: xsf fmt widely checked. (AF) 

17 Mar 2006      BZ for fcc crystals added to Test01/Reference (courtesy of 
                 Andrea Benassi). (AF)

13 Mar 2006      midpoint.f90 added to utility dir. Full Makefile included in the
                 directory. Updates also in the upper layer makefiles and in the
                 makedeps.sh script. (AF)

10 Mar 2006      Test12 added to repository (bulk silicon in zincblende cell, 
                 valence only). (BB)

27 Feb 2006      Fmt bug fixed in summary.f90 (total weight), courtesy of Laura Zoppi.
                 History trace is kept during minimization. cU_best and Omega_Tot_best
                 added to localization_module (experimental). "module" flag 
                 allowed for datatype in plot input namelist as an alias to 
                 "modulus". (AF)

24 Feb 2006      Test02 changed: nscf kpt meshes now are 6x6x6 instead of 4x4x4. 
                 Test01 changed: the same as in test02, but also the plotted band 